--- a/multimodal/websites/docs/docs/public/netlify.toml
+++ b/multimodal/websites/docs/docs/public/netlify.toml
@@ -12,6 +12,14 @@ from = "/doc/*"
 to = "https://preview.agent-tars.com/doc/*"
 
 [[redirects]]
+from = "/showcase/*"
+to = "/showcase"
+
+[[redirects]]
+from = "/replay/*"
+to = "/replay"
+
+[[redirects]]
 from = "/2025/04/11/difference-between-ui-tars-desktop-and-agent-tars-app"
 to = "https://preview.agent-tars.com/2025/04/11/difference-between-ui-tars-desktop-and-agent-tars-app"
 
