perf(agent-tars-web-ui): using monaco editor for incremental rendering (#934)

--- a/multimodal/agent-tars-web-ui/package.json
+++ b/multimodal/agent-tars-web-ui/package.json
@@ -3,12 +3,14 @@
   "version": "0.2.10",
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@monaco-editor/react": "4.7.0",
     "@mui/material": "^5.15.11",
     "classnames": "^2.5.1",
     "framer-motion": "12.19.2",
     "highlight.js": "^11.9.0",
     "jotai": "^2.7.0",
     "jsonrepair": "3.12.0",
+    "monaco-editor": "0.52.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
