feat(agent): support custom tool call engine constructor (#956)

--- a/multimodal/pnpm-workspace.yaml
+++ b/multimodal/pnpm-workspace.yaml
@@ -6,6 +6,8 @@ packages:
   - 'agent-tars-test-workspace'
   - 'agent-tars-web-ui'
   - 'agent-tars-interface'
+  # agent example
+  - 'agent-examples/*'
   # research agent
   - 'codeact-agent'
   - 'deep-research-agent'
