fix(mcp-browser): browser mcp screenshot and refactor form_input_fill  (#957)

--- a/packages/agent-infra/create-new-mcp/template-default/package.json
+++ b/packages/agent-infra/create-new-mcp/template-default/package.json
@@ -6,6 +6,12 @@
   "main": "./dist/server.cjs",
   "module": "./dist/server.js",
   "types": "./dist/server.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/server.js",
+      "require": "./dist/server.cjs"
+    }
+  },
   "bin": {
     "mcp-server-{{name}}": "./dist/index.cjs"
   },
