--- a/packages/agent-infra/mcp-servers/commands/package.json
+++ b/packages/agent-infra/mcp-servers/commands/package.json
@@ -1,11 +1,17 @@
 {
   "name": "@agent-infra/mcp-server-commands",
-  "version": "1.2.9",
+  "version": "1.2.14",
   "description": "An MCP server to run arbitrary commands",
   "type": "module",
   "main": "./dist/server.cjs",
   "module": "./dist/server.js",
   "types": "./dist/server.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/server.js",
+      "require": "./dist/server.cjs"
+    }
+  },
   "bin": {
     "mcp-server-commands": "./dist/index.cjs"
   },
@@ -32,7 +38,7 @@
   },
   "dependencies": {
     "mcp-http-server": "workspace:*",
-    "@modelcontextprotocol/sdk": "~1.13.1"
+    "@modelcontextprotocol/sdk": "~1.15.1"
   },
   "devDependencies": {
     "commander": "^13.1.0",
