--- a/packages/agent-infra/mcp-servers/search/package.json
+++ b/packages/agent-infra/mcp-servers/search/package.json
@@ -1,11 +1,17 @@
 {
   "name": "@agent-infra/mcp-server-search",
-  "version": "1.2.9",
+  "version": "1.2.14",
   "description": "MCP server for web search operations",
   "type": "module",
   "main": "./dist/server.cjs",
   "module": "./dist/server.js",
   "types": "./dist/server.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/server.js",
+      "require": "./dist/server.cjs"
+    }
+  },
   "bin": {
     "mcp-server-search": "./dist/index.cjs"
   },
@@ -23,7 +29,7 @@
   },
   "dependencies": {
     "@agent-infra/search": "workspace:*",
-    "@modelcontextprotocol/sdk": "~1.13.1",
+    "@modelcontextprotocol/sdk": "~1.15.1",
     "commander": "^13.1.0",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.5"
