--- a/multimodal/agent-tars-cli/package.json
+++ b/multimodal/agent-tars-cli/package.json
@@ -36,7 +36,7 @@
   },
   "dependencies": {
     "@agent-tars/core": "workspace:*",
-    "@agent-tars/server": "workspace:*"
+    "@multimodal/agent-server": "workspace:*"
   },
   "devDependencies": {
     "@agent-tars/interface": "workspace:*",
