--- a/packages/agent-infra/mcp-servers/browser/package.json
+++ b/packages/agent-infra/mcp-servers/browser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@agent-infra/mcp-server-browser",
-  "version": "1.2.14",
+  "version": "1.2.16",
   "description": "MCP server for browser use access",
   "license": "MIT",
   "homepage": "https://github.com/bytedance/UI-TARS-desktop",
@@ -46,37 +46,38 @@
     "watch": "rslib build --watch"
   },
   "dependencies": {
-    "@ui-tars/action-parser": "workspace:^",
     "@agent-infra/logger": "workspace:*",
+    "@agent-infra/browser-context": "0.1.2",
+    "@modelcontextprotocol/sdk": "~1.15.1",
+    "@ui-tars/action-parser": "workspace:^",
     "mcp-http-server": "workspace:^",
-    "puppeteer-core": "24.7.2",
-    "@modelcontextprotocol/sdk": "~1.15.1"
+    "puppeteer-core": "24.7.2"
   },
   "devDependencies": {
-    "jimp": "^1.6.0",
-    "mime-types": "^3.0.1",
-    "isbinaryfile": "^5.0.4",
-    "@types/mime-types": "^3.0.1",
-    "@agent-infra/shared": "workspace:*",
-    "mcp-proxy": "^3.0.3",
-    "sharp": "0.33.3",
-    "get-port": "^7.1.0",
-    "commander": "^13.1.0",
-    "@types/lodash.merge": "4.6.9",
-    "lodash.merge": "4.6.2",
-    "@ghostery/adblocker-puppeteer": "2.5.2",
-    "cross-fetch": "4.1.0",
-    "@rslib/core": "0.5.3",
     "@agent-infra/browser": "workspace:*",
     "@agent-infra/browser-use": "workspace:*",
-    "zod-to-json-schema": "^3.23.5",
-    "zod": "^3.23.8",
-    "tsx": "^4.19.3",
-    "vitest": "^3.0.7",
+    "@ghostery/adblocker-puppeteer": "2.5.2",
+    "@rslib/core": "0.5.3",
     "@types/diff": "^5.0.9",
+    "@types/jsdom": "^21.1.7",
+    "@types/lodash.merge": "4.6.9",
+    "@types/mime-types": "^3.0.1",
     "@types/minimatch": "^5.1.2",
     "@types/node": "^22",
+    "commander": "^13.1.0",
+    "cross-fetch": "4.1.0",
+    "get-port": "^7.1.0",
+    "isbinaryfile": "^5.0.4",
+    "jimp": "^1.6.0",
+    "lodash.merge": "4.6.2",
+    "mcp-proxy": "^3.0.3",
+    "mime-types": "^3.0.1",
+    "sharp": "0.33.3",
     "shx": "^0.3.4",
-    "typescript": "^5.7.3"
+    "tsx": "^4.19.3",
+    "typescript": "^5.7.3",
+    "vitest": "^3.0.7",
+    "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.5"
   }
 }
