feat(tarko): add `@tarko/interface` and `defineConfig` function (#1022)

--- a/multimodal/agent-tars/interface/package.json
+++ b/multimodal/agent-tars/interface/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@tarko/mcp-agent-interface": "workspace:*",
-    "@tarko/agent-server-interface": "workspace:*",
+    "@tarko/interface": "workspace:*",
     "@tarko/agio": "workspace:*"
   },
   "devDependencies": {
