feat(omni-tars): implement omni-tars multi-agent system (#1047)

--- a/multimodal/pnpm-workspace.yaml
+++ b/multimodal/pnpm-workspace.yaml
@@ -9,5 +9,5 @@ packages:
   - 'benchmark/*'
   # docs
   - 'websites/*'
-  # seed mcp agent
-  - 'seed-mcp-agent'
+  # omni-tars agent
+  - 'omni-tars/*'
