feat(tarko): mcpServer filter (close: #1045) (#1046)

--- a/multimodal/tarko/mcp-agent/package.json
+++ b/multimodal/tarko/mcp-agent/package.json
@@ -30,6 +30,7 @@
     "@tarko/agent": "workspace:*",
     "@tarko/agent-snapshot": "workspace:*",
     "@tarko/mcp-agent-interface": "workspace:*",
+    "@tarko/shared-utils": "workspace:*",
     "@modelcontextprotocol/sdk": "^1.12.1",
     "@agent-infra/mcp-client": "1.1.6-beta.3",
     "@agent-infra/logger": "0.0.2-beta.2"
