feat(tarko): add workspace display in navbar (close: #1039) (#1081)

--- a/multimodal/tarko/agent-web-ui/package.json
+++ b/multimodal/tarko/agent-web-ui/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@tarko/agent-interface": "workspace:*",
+    "@tarko/interface": "workspace:*",
     "@agent-tars/interface": "workspace:*",
     "@rsbuild/core": "1.3.18",
     "@rsbuild/plugin-react": "1.1.1",
