feat: enhance code agent and model output adaptation (#1108)

--- a/multimodal/omni-tars/code-agent/package.json
+++ b/multimodal/omni-tars/code-agent/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "@tarko/agent": "workspace:*",
     "@omni-tars/core": "workspace:*",
-    "@tarko/agent-interface": "workspace:*"
+    "@tarko/agent-interface": "workspace:*",
+    "node-fetch": "3.3.2"
   },
   "devDependencies": {
     "@rslib/core": "0.10.0",
