--- a/multimodal/tarko/agent-web-ui/package.json
+++ b/multimodal/tarko/agent-web-ui/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.5.1",
     "framer-motion": "12.19.2",
     "highlight.js": "^11.9.0",
+    "parse-diff": "0.11.1",
     "jotai": "^2.7.0",
     "jsonrepair": "3.12.0",
     "monaco-editor": "0.52.0",
