--- a/multimodal/omni-tars/code-agent/package.json
+++ b/multimodal/omni-tars/code-agent/package.json
@@ -28,8 +28,7 @@
   "dependencies": {
     "@tarko/agent": "workspace:*",
     "@omni-tars/core": "workspace:*",
-    "@tarko/agent-interface": "workspace:*",
-    "node-fetch": "3.3.2"
+    "@tarko/agent-interface": "workspace:*"
   },
   "devDependencies": {
     "@rslib/core": "0.10.0",
