feat(o-agent): improve configuration and performance optimization (#1131)

--- a/multimodal/omni-tars/omni-agent/package.json
+++ b/multimodal/omni-tars/omni-agent/package.json
@@ -26,19 +26,19 @@
     "dev:agent": "tarko --agent ./"
   },
   "dependencies": {
+    "@omni-tars/code-agent": "workspace:*",
     "@omni-tars/core": "workspace:*",
     "@omni-tars/gui-agent": "workspace:*",
     "@omni-tars/mcp-agent": "workspace:*",
-    "@omni-tars/code-agent": "workspace:*",
     "@tarko/agent": "workspace:*"
   },
   "devDependencies": {
     "@rslib/core": "0.10.0",
-    "@types/node": "22.15.30",
-    "typescript": "^5.5.3",
-    "vitest": "^1.0.0",
-    "openai": "4.93.0",
     "@tarko/agent-cli": "workspace:*",
-    "@tarko/agent-interface": "workspace:*"
+    "@tarko/agent-interface": "workspace:*",
+    "@types/node": "22.15.30",
+    "openai": "4.93.0",
+    "typescript": "^5.5.3",
+    "vitest": "^1.0.0"
   }
 }
