feat(tarko): add `.env` file support (#1156)

--- a/multimodal/tarko/agent-cli/package.json
+++ b/multimodal/tarko/agent-cli/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "@tarko/agent": "workspace:*",
     "@tarko/agent-server": "workspace:*",
-    "@tarko/shared-utils": "workspace:*"
+    "@tarko/shared-utils": "workspace:*",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "@tarko/agent-interface": "workspace:*",
