--- a/multimodal/agent-tars/my-workspace/package.json
+++ b/multimodal/agent-tars/my-workspace/package.json
@@ -1,11 +1,11 @@
 {
   "private": true,
-  "name": "@agent-tars/test-workspace",
+  "name": "@agent-tars/my-workspace",
   "version": "0.3.0-beta.1",
-  "description": "A test workspace project Agent TARS.",
+  "description": "My custom workspace for Agent TARS",
   "scripts": {
-    "start": "tars run",
-    "serve": "tars serve"
+    "start": "../cli/bin/cli.js",
+    "serve": "../cli/bin/cli.js serve"
   },
   "dependencies": {
     "@agent-tars/interface": "workspace:*"
