chore: update gitignore to exclude session files
- add patterns to ignore session_*.json files
- update secretlintignore for better coverage
- prevent accidental commit of temporary session data

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ coverage/
 scripts/merge-yml/*.yml
 .claude/
 .history/
+
+# Agent TARS session files (temporary data)
+**/session_*.json
+multimodal/agent-tars/my-workspace/session_*.json
