--- a/.secretlintignore
+++ b/.secretlintignore
@@ -6,3 +6,6 @@ multimodal/tarko/model-provider/src/constants.ts
 
 # Ignore environment variable references (not actual secrets)
 multimodal/agent-tars/my-workspace/agent-tars.config.ts
+
+# Ignore API key variable assignments in model resolver (not actual secrets)
+multimodal/tarko/model-provider/src/model-resolver.ts
