feat: enhance o-agent with session state management and Jupyter CI support (#1186)

--- a/multimodal/omni-tars/omni-agent/package.json
+++ b/multimodal/omni-tars/omni-agent/package.json
@@ -23,7 +23,7 @@
     "dev": "rslib build --watch",
     "build": "rslib build",
     "test": "vitest",
-    "dev:agent": "tarko --agent ./"
+    "dev:agent": "tarko run ./"
   },
   "dependencies": {
     "@omni-tars/code-agent": "workspace:*",
