--- a/multimodal/omni-tars/gui-agent/package.json
+++ b/multimodal/omni-tars/gui-agent/package.json
@@ -32,7 +32,7 @@
     "@ui-tars/sdk": "1.2.3",
     "@agent-infra/browser": "0.1.1",
     "@agent-infra/media-utils": "0.1.5",
-    "@agent-infra/sandbox": "0.0.1",
+    "@agent-infra/sandbox": "0.0.2-beta7",
     "@gui-agent/operator-browser": "workspace:*",
     "@gui-agent/action-parser": "workspace:*"
   },
