--- a/multimodal/omni-tars/omni-agent/package.json
+++ b/multimodal/omni-tars/omni-agent/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@omni-tars/agent",
-  "version": "0.0.1",
+  "version": "0.3.0-beta.3",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
