--- a/multimodal/tarko/agent-web-ui/package.json
+++ b/multimodal/tarko/agent-web-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tarko/web-ui",
-  "version": "0.3.0-beta.1",
+  "version": "0.3.0-beta.3",
   "description": "Default Web UI for Tarko",
   "dependencies": {
     "@headlessui/react": "^1.7.17",
@@ -24,6 +24,10 @@
     "remark-github-blockquote-alert": "1.3.0",
     "socket.io-client": "^4.7.2",
     "uuid": "^9.0.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
     "@tarko/agent-interface": "workspace:*",
