--- a/multimodal/tarko/agent/package.json
+++ b/multimodal/tarko/agent/package.json
@@ -54,7 +54,7 @@
     "@agent-infra/shared": "0.0.2",
     "@agent-infra/browser": "0.1.1",
     "@agent-infra/browser-search": "0.0.5",
-    "@ui-tars/operator-browser": "1.2.2",
+    "@gui-agent/operator-browser": "workspace:*",
     "@rslib/core": "0.10.0",
     "@types/node": "22.15.30",
     "tsx": "^4.19.2",
