--- a/multimodal/tarko/agent-web-ui/package.json
+++ b/multimodal/tarko/agent-web-ui/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.5.1",
     "framer-motion": "12.19.2",
     "highlight.js": "^11.9.0",
+    "katex": "^0.16.9",
     "parse-diff": "0.11.1",
     "jotai": "^2.7.0",
     "jsonrepair": "3.12.0",
@@ -19,9 +20,11 @@
     "react-markdown": "10.1.0",
     "react-syntax-highlighter": "15.6.1",
     "rehype-highlight": "7.0.2",
+    "rehype-katex": "^7.0.1",
     "rehype-raw": "7.0.0",
     "remark-gfm": "4.0.1",
     "remark-github-blockquote-alert": "1.3.0",
+    "remark-math": "^6.0.0",
     "socket.io-client": "^4.7.2",
     "uuid": "^9.0.0"
   },
