--- a/multimodal/omni-tars/gui-agent/package.json
+++ b/multimodal/omni-tars/gui-agent/package.json
@@ -30,17 +30,21 @@
     "@omni-tars/core": "workspace:*",
     "@tarko/agent-interface": "workspace:*",
     "@ui-tars/sdk": "1.2.3",
+    "@ui-tars/shared": "1.2.3",
+    "@agent-infra/logger": "0.0.2-beta.2",
     "@agent-infra/browser": "0.1.1",
     "@agent-infra/media-utils": "0.1.5",
     "@agent-infra/sandbox": "0.0.2-beta7",
     "@gui-agent/operator-browser": "workspace:*",
-    "@gui-agent/action-parser": "workspace:*"
+    "@gui-agent/action-parser": "workspace:*",
+    "lodash.isnumber": "3.0.3"
   },
   "devDependencies": {
     "@rslib/core": "0.10.0",
     "@types/node": "22.15.30",
     "typescript": "^5.5.3",
     "vitest": "^1.0.0",
-    "openai": "4.93.0"
+    "openai": "4.93.0",
+    "@types/lodash.isnumber": "3.0.3"
   }
 }
