--- a/multimodal/omni-tars/gui-agent/package.json
+++ b/multimodal/omni-tars/gui-agent/package.json
@@ -29,6 +29,7 @@
     "@tarko/agent": "workspace:*",
     "@omni-tars/core": "workspace:*",
     "@tarko/agent-interface": "workspace:*",
+    "@tarko/shared-utils": "workspace:*",
     "@ui-tars/sdk": "1.2.3",
     "@ui-tars/shared": "1.2.3",
     "@agent-infra/logger": "0.0.2-beta.2",
