feat(browser-operator): use agent-infra's Hotkey to execute hotkeys (#1343)
Co-authored-by: 赵庆浩 <zhaoqinghao@bytedance.com>

--- a/multimodal/gui-agent/operator-browser/package.json
+++ b/multimodal/gui-agent/operator-browser/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@agent-infra/browser": "0.1.1",
     "@agent-infra/logger": "0.0.2-beta.2",
+    "@agent-infra/puppeteer-enhance": "0.1.6",
     "@ui-tars/sdk": "1.2.3"
   },
   "devDependencies": {
