--- a/multimodal/tarko/agent-server/package.json
+++ b/multimodal/tarko/agent-server/package.json
@@ -19,28 +19,29 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@tarko/context-engineer": "workspace:*"
+    "@tarko/context-engineer": "workspace:*",
+    "transliteration": "^2.3.5"
   },
   "devDependencies": {
-    "@tarko/interface": "workspace:*",
-    "@tarko/shared-utils": "workspace:*",
+    "@agent-infra/shared": "0.0.2",
+    "@rslib/core": "0.10.0",
     "@tarko/agent-snapshot": "workspace:*",
     "@tarko/agio": "workspace:*",
-    "@agent-infra/shared": "0.0.2",
+    "@tarko/interface": "workspace:*",
+    "@tarko/shared-utils": "workspace:*",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "22.15.30",
+    "@types/supertest": "^6.0.2",
     "cors": "^2.8.5",
     "express": "4.21.2",
     "http-proxy-middleware": "^2.0.6",
-    "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2",
     "lowdb": "^6.0.1",
     "nanoid": "^5.0.8",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@rslib/core": "0.10.0",
-    "@types/node": "22.15.30",
-    "typescript": "^5.5.3",
-    "vitest": "3.2.4",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "supertest": "^7.0.0",
-    "@types/supertest": "^6.0.2"
+    "typescript": "^5.5.3",
+    "vitest": "3.2.4"
   }
 }
