feat(tarko): init `@tarko/agent-ui-builder` (#1436)

--- a/multimodal/tarko/agent-cli/package.json
+++ b/multimodal/tarko/agent-cli/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@tarko/agent": "workspace:*",
     "@tarko/agent-server": "workspace:*",
+    "@tarko/agent-ui-builder": "workspace:*",
     "@tarko/shared-utils": "workspace:*",
     "@agent-tars/core": "workspace:*",
     "@omni-tars/agent": "workspace:*",
