--- a/multimodal/omni-tars/gui-agent/package.json
+++ b/multimodal/omni-tars/gui-agent/package.json
@@ -35,7 +35,7 @@
     "@agent-infra/logger": "0.0.2-beta.2",
     "@agent-infra/browser": "0.1.1",
     "@agent-infra/media-utils": "0.1.5",
-    "@agent-infra/sandbox": "0.0.2-beta7",
+    "@agent-infra/sandbox": "0.0.5",
     "@gui-agent/operator-browser": "workspace:*",
     "@gui-agent/operator-aio": "workspace:*",
     "@gui-agent/action-parser": "workspace:*",
