--- a/multimodal/package.json
+++ b/multimodal/package.json
@@ -18,14 +18,14 @@
     "test:watch": "vitest",
     "coverage": "vitest run --coverage",
     "format": "pnpm prettier --write .",
-    "release": "ptk release --push-tag --build --ignore-scripts --tag-prefix '@agent-tars@'",
-    "release:full": "ptk release --push-tag --build --ignore-scripts --tag-prefix '@agent-tars@' --create-github-release",
-    "release:ai": "ptk release --push-tag --build --ignore-scripts --tag-prefix '@agent-tars@' --use-ai --provider=azure-openai --model=aws_sdk_claude37_sonnet --baseURL=AWS_CLAUDE_API_BASE_URL",
-    "release:ai:full": "ptk release --push-tag --build --ignore-scripts --tag-prefix '@agent-tars@' --use-ai --provider=azure-openai --model=aws_sdk_claude37_sonnet --baseURL=AWS_CLAUDE_API_BASE_URL --create-github-release",
-    "release:ai:dryrun": "ptk release --push-tag --build --ignore-scripts --tag-prefix '@agent-tars@' --use-ai --provider=azure-openai --model=aws_sdk_claude37_sonnet --baseURL=AWS_CLAUDE_API_BASE_URL --dry-run",
-    "github-release": "ptk github-release --tag-prefix '@agent-tars@'",
-    "github-release:dryrun": "ptk github-release --tag-prefix '@agent-tars@' --dry-run",
-    "changelog": "ptk changelog --tag-prefix '@agent-tars@' --use-ai --provider=azure-openai --model=aws_sdk_claude37_sonnet --baseURL=AWS_CLAUDE_API_BASE_URL",
+    "release": "ptk release --push-tag --build --ignore-scripts",
+    "release:full": "ptk release --push-tag --build --ignore-scripts --create-github-release",
+    "release:ai": "ptk release --push-tag --build --ignore-scripts --use-ai --provider=azure-openai --model=aws_sdk_claude37_sonnet --baseURL=AWS_CLAUDE_API_BASE_URL",
+    "release:ai:full": "ptk release --push-tag --build --ignore-scripts --use-ai --provider=azure-openai --model=aws_sdk_claude37_sonnet --baseURL=AWS_CLAUDE_API_BASE_URL --create-github-release",
+    "release:ai:dryrun": "ptk release --push-tag --build --ignore-scripts --use-ai --provider=azure-openai --model=aws_sdk_claude37_sonnet --baseURL=AWS_CLAUDE_API_BASE_URL --dry-run",
+    "github-release": "ptk github-release",
+    "github-release:dryrun": "ptk github-release --dry-run",
+    "changelog": "ptk changelog --use-ai --provider=azure-openai --model=aws_sdk_claude37_sonnet --baseURL=AWS_CLAUDE_API_BASE_URL",
     "patch": "ptk patch"
   },
   "engines": {
