--- a/multimodal/tarko/agent-ui/package.json
+++ b/multimodal/tarko/agent-ui/package.json
@@ -6,14 +6,15 @@
     "@headlessui/react": "^1.7.17",
     "@monaco-editor/react": "4.7.0",
     "@mui/material": "^5.15.11",
+    "ansi-to-react": "^6.1.6",
     "classnames": "^2.5.1",
     "framer-motion": "12.19.2",
     "highlight.js": "^11.9.0",
-    "katex": "^0.16.9",
-    "parse-diff": "0.11.1",
     "jotai": "^2.7.0",
     "jsonrepair": "3.12.0",
+    "katex": "^0.16.9",
     "monaco-editor": "0.52.0",
+    "parse-diff": "0.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
@@ -32,11 +33,11 @@
     "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
-    "@tarko/agent-interface": "workspace:*",
-    "@tarko/interface": "workspace:*",
     "@agent-tars/interface": "workspace:*",
     "@rsbuild/core": "1.3.18",
     "@rsbuild/plugin-react": "1.1.1",
+    "@tarko/agent-interface": "workspace:*",
+    "@tarko/interface": "workspace:*",
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
     "@types/react-syntax-highlighter": "^15.5.11",
