--- a/multimodal/package.json
+++ b/multimodal/package.json
@@ -19,6 +19,7 @@
     "coverage": "vitest run --coverage",
     "format": "pnpm prettier --write .",
     "release": "ptk release --push-tag --build --ignore-scripts",
+    "release:canary": "ptk release --canary --push-tag --build --ignore-scripts",
     "release:full": "ptk release --push-tag --build --ignore-scripts --create-github-release",
     "release:ai": "ptk release --push-tag --build --ignore-scripts --use-ai --provider=azure-openai --model=aws_sdk_claude37_sonnet --baseURL=AWS_CLAUDE_API_BASE_URL",
     "release:ai:full": "ptk release --push-tag --build --ignore-scripts --use-ai --provider=azure-openai --model=aws_sdk_claude37_sonnet --baseURL=AWS_CLAUDE_API_BASE_URL --create-github-release",
