--- a/multimodal/tarko/agent-ui/package.json
+++ b/multimodal/tarko/agent-ui/package.json
@@ -4,17 +4,13 @@
   "description": "Default Web UI for Tarko",
   "dependencies": {
     "@headlessui/react": "^1.7.17",
-    "@monaco-editor/react": "4.7.0",
     "@mui/material": "^5.15.11",
     "ansi-to-react": "^6.1.6",
     "classnames": "^2.5.1",
     "framer-motion": "12.19.2",
-    "highlight.js": "^11.9.0",
     "jotai": "^2.7.0",
     "jsonrepair": "3.12.0",
     "katex": "^0.16.9",
-    "monaco-editor": "0.52.0",
-    "parse-diff": "0.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
@@ -34,6 +30,7 @@
   },
   "devDependencies": {
     "@agent-tars/interface": "workspace:*",
+    "@tarko/ui": "workspace:*",
     "@rsbuild/core": "1.3.18",
     "@rsbuild/plugin-react": "1.1.1",
     "@tarko/agent-interface": "workspace:*",
