--- a/multimodal/tarko/ui/package.json
+++ b/multimodal/tarko/ui/package.json
@@ -22,12 +22,11 @@
     "dev": "rslib build --watch"
   },
   "dependencies": {
-    "framer-motion": "12.19.2",
-    "react-icons": "5.5.0",
-    "@headlessui/react": "2.2.2",
-    "react-markdown": "10.1.0",
-    "react-syntax-highlighter": "15.6.1",
-    "@types/react-syntax-highlighter": "^15.5.13"
+    "react-icons": "^4.11.0",
+    "monaco-editor": "0.52.0",
+    "parse-diff": "0.11.1",
+    "@monaco-editor/react": "4.7.0",
+    "highlight.js": "^11.9.0"
   },
   "devDependencies": {
     "@rslib/core": "0.10.0",
