refactor(gui-agent): refactor gui agent sdk: agent, action-parser and operator (#1550)

--- a/multimodal/gui-agent/operator-adb/package.json
+++ b/multimodal/gui-agent/operator-adb/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@gui-agent/action-parser",
+  "name": "@gui-agent/operator-adb",
+  "description": "Android operator based ADB for GUI Agent",
   "version": "0.3.0-beta.11",
-  "description": "Action parser SDK for general action parser",
   "repository": {
     "type": "git",
     "url": "https://github.com/bytedance/UI-TARS-desktop"
@@ -11,9 +11,11 @@
   },
   "keywords": [
     "AI",
-    "Action",
-    "Parser",
-    "UI-TARS"
+    "SDK",
+    "Operator",
+    "UI-TARS",
+    "Android",
+    "adb"
   ],
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -22,7 +24,8 @@
     "dev": "rslib build --watch",
     "build": "rslib build",
     "build:watch": "rslib build --watch",
-    "test": "vitest"
+    "test": "vitest",
+    "example": "npx tsx examples/test-runner.ts"
   },
   "license": "Apache-2.0",
   "files": [
@@ -33,15 +36,17 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
-    "@ui-tars/shared": "1.2.3",
-    "@gui-agent/shared": "workspace:*",
+    "@agent-infra/browser": "0.1.1",
     "@agent-infra/logger": "0.0.2-beta.2",
-    "fast-xml-parser": "^4.3.2",
-    "lodash.isnumber": "3.0.3"
+    "@agent-infra/media-utils": "0.1.5",
+    "@gui-agent/shared": "workspace:*",
+    "appium-adb": "^13.0.3"
   },
   "devDependencies": {
     "@rslib/core": "0.10.0",
-    "@types/lodash.isnumber": "3.0.3",
+    "dotenv": "^16.3.1",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.2",
     "vitest": "^3.0.2"
   }
