--- a/multimodal/websites/tarko/package.json
+++ b/multimodal/websites/tarko/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@tarko/docs",
-  "version": "0.1.0",
+  "version": "0.3.0-beta.12",
   "scripts": {
     "build": "rspress build",
     "dev": "rspress dev",
